--- a/theme/gnome-shell-sass/_palette.scss
+++ b/theme/gnome-shell-sass/_palette.scss
@@ -1,7 +1,7 @@
 //GNOME Color Palette
 $blue_1: #99c1f1;
 $blue_2: #62a0ea;
-$blue_3: #3584e4;
+$blue_3: #007EFF;
 $blue_4: #1c71d8;
 $blue_5: #1a5fb4;
 $green_1: #8ff0a4;
@@ -42,5 +42,5 @@ $light_5: #9a9996;
 $dark_1: #77767b;
 $dark_2: #5e5c64;
 $dark_3: #3d3846;
-$dark_4: #241f31;
+$dark_4: #1E212F;
 $dark_5: #000000;
