--- a/theme/gnome-shell-high-contrast.scss
+++ b/theme/gnome-shell-high-contrast.scss
@@ -7,8 +7,8 @@ $variant: 'dark';
 
 .toggle-switch { width: 48px; }
 .toggle-switch {
-  background-image: url("resource:///org/gnome/shell/theme/toggle-off-hc.svg");
-  &:checked { background-image: url("resource:///org/gnome/shell/theme/toggle-on-hc.svg"); }
+  background-image: url("toggle-off-hc.svg");
+  &:checked { background-image: url("toggle-on-hc.svg"); }
 }
 
 //force opaque panel
