--- a/theme/gnome-shell-sass/_colors.scss
+++ b/theme/gnome-shell-sass/_colors.scss
@@ -6,7 +6,8 @@
 $is_highcontrast:false;
 
 // base color for light theme
-$_dark_base_color: desaturate($dark_4, 100%);
+// $_dark_base_color: desaturate($dark_4, 100%);
+$_dark_base_color: $dark_4;
 
 $base_color: if($variant == 'light', $light_1, $_dark_base_color);
 $bg_color: if($variant == 'light', $light_2, lighten($base_color, 5%));
