--- a/theme/gnome-shell-sass/widgets/_check-box.scss
+++ b/theme/gnome-shell-sass/widgets/_check-box.scss
@@ -10,9 +10,9 @@ $check_width: 24px;
   StBin {
     width: $check_width;
     height: $check_height;
-    background-image: if($variant == 'light', url("resource:///org/gnome/shell/theme/checkbox-off-light.svg"), url("resource:///org/gnome/shell/theme/checkbox-off.svg"));
+    background-image: if($variant == 'light', url("checkbox-off-light.svg"), url("checkbox-off.svg"));
   }
-  &:focus StBin { background-image: if($variant == 'light', url("resource:///org/gnome/shell/theme/checkbox-off-focused-light.svg"), url("resource:///org/gnome/shell/theme/checkbox-off-focused.svg"));; }
-  &:checked StBin { background-image: url("resource:///org/gnome/shell/theme/checkbox.svg"); }
-  &:focus:checked StBin { background-image: url("resource:///org/gnome/shell/theme/checkbox-focused.svg"); }
+  &:focus StBin { background-image: if($variant == 'light', url("checkbox-off-focused-light.svg"), url("checkbox-off-focused.svg"));; }
+  &:checked StBin { background-image: url("checkbox.svg"); }
+  &:focus:checked StBin { background-image: url("checkbox-focused.svg"); }
 }
