--- a/theme/gnome-shell-sass/widgets/_dash.scss
+++ b/theme/gnome-shell-sass/widgets/_dash.scss
@@ -13,7 +13,7 @@ $dash_border_radius: $modal_radius + $dash_padding;
   margin-top: $dash_padding;
 
   .placeholder {
-    // background-image: url("resource:///org/gnome/shell/theme/dash-placeholder.svg");
+    // background-image: url("dash-placeholder.svg");
     background-image:none;
     background-size: contain;
     height: $dash_placeholder_size;
